--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
-input {
-  height: 30px;
-  flex: 0 1 50%;
-}
-
 button {
   font-size: larger;
   padding-top: 10px;
   padding-bottom: 10px;
   flex: 0 1 20%;
+}
+
+.previous {
+  padding-right: 10px;
+  text-align: end;
+  font-size: 30px;
+  height: 30px;
+  flex: 0 1 50%;
+  border: solid gray;
+}
+
+.current {
+  padding-right: 10px;
+  font-size: 40px;
+  text-align: end;
+  height: 50px;
+  flex: 0 1 50%;
+  border: solid gray;
 }
 
 .container {
